beer display data

--- a/src/components/modals/BeerModal/BeerModal.scss
+++ b/src/components/modals/BeerModal/BeerModal.scss
@@ -1,5 +1,58 @@
+@import "../../../assets/css/variables";
+
 .beer-modal {
   position: relative;
   background-color: white;
   border-radius: 5px;
+
+  .beer-display {
+    height: 75vh;
+    overflow: scroll;
+    margin-top: $spacing-xxl-4;
+
+    .main-information {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .beer-image {
+        height: 300px;
+      }
+
+      .beer-info {
+
+        .beer-title {
+          color: $beer-color-3;
+          text-shadow: 1px 1px 1px $beer-color-4;
+          font-style: normal;
+          font-weight: 800;
+          font-size: 24px;
+          margin-bottom: 0;
+        }
+
+        .beer-author {
+          color: $beer-color-3;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 14px;
+          margin-top: $spacing-xs;
+        }
+
+        .beer-description {
+        }
+      }
+    }
+    .more-beer-info {
+      .label {
+        color: $beer-color-4;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 12px;
+        margin-bottom: $spacing-xxs;
+      }
+      .text {
+        margin-top: 0;
+      }
+    }
+  }
 }
