--- a/src/components/modals/BeerModal/BeerModal.scss
+++ b/src/components/modals/BeerModal/BeerModal.scss
@@ -8,19 +8,35 @@
   .beer-display {
     height: 75vh;
     overflow: scroll;
-    margin-top: $spacing-xxl-4;
+    padding-top: $spacing-xxl-4;
+    padding-bottom: $spacing-xxl-4;
+
+    @media (min-width: 600px) {
+      height: 50vh;
+      width: 75vw;
+    }
 
     .main-information {
       display: flex;
       flex-direction: column;
       align-items: center;
 
+      @media (min-width: 600px) {
+        flex-direction: row;
+        justify-content: space-evenly;
+        margin-bottom: $spacing-xxl-4;
+
+      }
+
       .beer-image {
-        height: 300px;
+        height: 250px;
+
       }
 
       .beer-info {
-
+        @media (min-width: 600px) {
+          width: 400px;
+        }
         .beer-title {
           color: $beer-color-3;
           text-shadow: 1px 1px 1px $beer-color-4;
@@ -43,15 +59,31 @@
       }
     }
     .more-beer-info {
-      .label {
-        color: $beer-color-4;
-        font-style: normal;
-        font-weight: 800;
-        font-size: 12px;
-        margin-bottom: $spacing-xxs;
+      .additional-info {
+        margin-bottom: $spacing-xxl;
+
+        .text {
+          margin: 0;
+        }
       }
-      .text {
-        margin-top: 0;
+    }
+
+    .label {
+      color: $beer-color-4;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 12px;
+      margin-bottom: $spacing-xxs;
+    }
+
+    .numbers-info {
+      display: flex;
+      justify-content: space-evenly;
+
+      .color-dark {
+        margin-left: $spacing-xxs;
+        color: $beer-color-5;
+        font-size: 14px;
       }
     }
   }
